# ocaml-protoc-plugin

./: .gitignore  .ocamlformat  .ocamlformat-ignore  .ocp-indent  .travis.yml  Changelog  Changelog.md  Makefile  README.md  TODO  bsconfig.json  conf-protoc.opam  dune  dune-project  dune-workspace  flake.nix  index.html  ocaml-protoc-plugin.opam  package.json
.github/workflows/: check-licenses.yaml  workflow.yml
bench/: Makefile  bench.ml  bench.proto  dune  empty.proto  enum.proto  enum_list.proto  float.proto  float_list.proto  int64.proto  int64_list.proto  string.proto  string_list.proto
bench/plugin/: dune
bench/protoc/: dune
conf-protoc/: index.html
examples/echo/: dune  echo.proto  test.ml
examples/echo_deriving/: dune  test.ml
examples/echo_deriving/google_types_deriving/: dune
examples/extensions/: dune  extensions.proto  test.ml
ocaml-protoc-plugin/: index.html
ocaml-protoc-plugin/Google_types/: index.html
ocaml-protoc-plugin/Google_types/Any/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/Protobuf/Any/: index.html
ocaml-protoc-plugin/Google_types/Api/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Api/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Method/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Mixin/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/Protobuf/DescriptorProto/: index.html
ocaml-protoc-plugin/Google_types/Duration/: index.html
ocaml-protoc-plugin/Google_types/Duration/Google/: index.html
ocaml-protoc-plugin/Google_types/Duration/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Empty/: index.html
ocaml-protoc-plugin/Google_types/Empty/Google/: index.html
ocaml-protoc-plugin/Google_types/Empty/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/Google/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Source_context/: index.html
ocaml-protoc-plugin/Google_types/Source_context/Google/: index.html
ocaml-protoc-plugin/Google_types/Source_context/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Struct/: index.html
ocaml-protoc-plugin/Google_types/Struct/Google/: index.html
ocaml-protoc-plugin/Google_types/Struct/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/Google/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Type/: index.html
ocaml-protoc-plugin/Google_types/Type/Google/: index.html
ocaml-protoc-plugin/Google_types/Type/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/Google/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/Google/Protobuf/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Extensions/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Reader/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Result/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Message/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/Request/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/Response/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Writer/: index.html
src/google_types/: dune
src/google_types_deriving/: dune
src/ocaml_protoc_plugin/: deserialize.ml  deserialize.mli  dune  extensions.ml  extensions.mli  field.ml  infix.ml  merge.ml  ocaml_protoc_plugin.ml  option.ml  reader.ml  reader.mli  result.ml  result.mli  runtime.ml  serialize.ml  service.ml  spec.ml  writer.ml  writer.mli  yojson.ml
src/plugin/: .merlin  code.ml  dune  emit.ml  emit.mli  names.ml  ocaml_protoc_plugin.ml  option.ml  parameters.ml  parse.ml  protoc_gen_ocaml.ml  scope.ml  scope.mli  types.ml  types.mli
src/protobuf/: Base.ml  Infix.ml  deserialize.ml  dune  field.ml  int64Compare.ml  littleEndian.ml  protobuf.ml  protobuffer.ml  reader.ml  result.ml  serialize.ml  service.ml  spec.ml  writer.ml
src/protocol/: deserialize.ml  dune  protobuffer.ml  protocol.ml  serialize.ml  spec.ml
src/spec/: .merlin  descriptor.ml  descriptor_pb.ml  descriptor_pb.mli  descriptor_pp.ml  descriptor_pp.mli  descriptor_types.ml  descriptor_types.mli  dune  options.ml  options.proto  plugin.ml  plugin_pb.ml  plugin_pb.mli  plugin_pp.ml  plugin_pp.mli  plugin_types.ml  plugin_types.mli  spec.ml
src/test/: .merlin  basic.proto  dune  simple.proto  test.ml
test/: default.proto  dune  empty.proto  empty_message.proto  empty_message_test.ml  enum.proto  enum_test.ml  extensions.proto  extensions_test.ml  include.proto  include_test.ml  included.proto  included2.proto  included3-dash.proto  int_types.proto  int_types_native.proto  int_types_native_proto2.proto  int_types_native_test.ml  int_types_test.ml  large.proto  large_test.ml  mangle_names.proto  mangle_names_test.ml  map.proto  map_test.ml  merge.proto  merge_test.ml  message.proto  message_test.ml  name_clash.proto  name_clash2.proto  name_clash_mangle.proto  oneof.proto  oneof2.proto  oneof2_test.ml  oneof_test.ml  options.proto  package.proto  package_test.ml  packed.proto  (+23 more)
test/config/: dune  support_proto3_optional.ml
(+59 files in other folders)
