opam-version: "2.0"
maintainer: "Issuu"
authors: "Anders Fugmann <af@issuu.com>"
license: "APACHE 2.0"
homepage: "https://developers.google.com/protocol-buffers/"
bug-reports: "https://github.com/issuu/ocaml-protoc-plugin/issues"
build: [ "protoc" ]

depexts: [
  ["libprotoc-dev"] {os-distribution = "debian"}
  ["libprotoc-devel"] {os-distribution = "mageia"}
  ["libprotoc-dev"] {os-distribution = "ubuntu"}
  ["protoc-dev"] {os-distribution = "centos"}
  ["protoc-dev"] {os-distribution = "fedora"}
  ["protoc-dev"] {os-distribution = "rhel"}
  ["protoc-dev"] {os-distribution = "alpine"}
  ["protoc-dev"] {os-family = "suse"}
  ["protoc"] {os = "freebsd"}
  ["protoc"] {os = "macos" & os-distribution = "homebrew"}
]
synopsis: "Virtual package to install protoc compiler and files"
description:
  "This package will install a protoc + protocol files if invoked via `opam depext`"
