opam-version: "2.0"
maintainer: "Issuu"
authors: "Anders Fugmann <af@issuu.com>"
license: "APACHE 2.0"
homepage: "https://developers.google.com/protocol-buffers/"
bug-reports: "https://github.com/issuu/ocaml-protoc-plugin/issues"
build: [ "protoc" "--help" ]

depexts: [
  ["libprotoc-dev" "protobuf-compiler"] {os-distribution = "debian"}
  ["libprotoc-devel" "protobuf-compiler"] {os-distribution = "mageia"}
  ["libprotoc-dev" "protobuf-compiler"] {os-distribution = "ubuntu"}
  ["protoc-dev" "protobuf-compiler"] {os-distribution = "centos"}
  ["protoc-dev" "protobuf-compiler"] {os-distribution = "fedora"}
  ["protoc-dev" "protobuf-compiler"] {os-distribution = "rhel"}
  ["protoc-dev" "protobuf-compiler"] {os-distribution = "alpine"}
  ["protoc-dev" "protobuf-compiler"] {os-family = "suse"}
  ["protoc"] {os = "freebsd"}
  ["protoc"] {os = "macos" & os-distribution = "homebrew"}
]
synopsis: "Virtual package to install protoc compiler and files"
description:
  "This package will install a protoc + protocol files if invoked via `opam depext`"
