opam-version: "2.0"
maintainer: "Issuu"
authors: "Anders Fugmann <af@issuu.com>"
license: "APACHE 2.0"
homepage: "https://developers.google.com/protocol-buffers/"
bug-reports: "https://github.com/issuu/ocaml-protoc-plugin/issues"
build: [ "protoc" "--version" ]

depexts: [
  ["protobuf-compiler"] {os-distribution = "debian"}
  ["protobuf-compiler"] {os-distribution = "mageia"}
  ["protobuf-compiler"] {os-distribution = "ubuntu"}
  ["protobuf-compiler"] {os-distribution = "centos"}
  ["protobuf-compiler"] {os-distribution = "fedora"}
  ["protobuf-compiler"] {os-distribution = "rhel"}
  ["protoc"]            {os-distribution = "alpine"}
  ["protobuf-compiler"] {os-distribution = "arch"}
  ["protobuf-compiler"] {os-family = "suse"}
  ["protoc"]            {os = "freebsd"}
  ["protoc"]            {os = "macos" & os-distribution = "homebrew"}
]
synopsis: "Virtual package to install protoc compiler"
description:
  "This package will install the protoc compiler if invoked via `opam depext`"
