opam-version: "2.0"
maintainer: "Issuu"
authors: "Anders Fugmann <af@issuu.com>"
license: "APACHE 2.0"
homepage: "https://github.com/issuu/ocaml-protoc-plugin"
dev-repo: "git+https://github.com/issuu/ocaml-protoc-plugin"
bug-reports: "https://github.com/issuu/ocaml-protoc-plugin/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "base"
  "conf-protoc"
  "dune" {>= "1.10" & build}
  "ocaml" {>= "4.06.0"}
  "ocaml-protoc" {build}
  "ocplib-endian"
  "ppx_let"
  "ppx_deriving"
  "ppx_expect"
  "ppx_inline_test"
]

synopsis: "Plugin for protoc protobuf compiler to generate ocaml definitions from a .proto file"

description: """ The plugin generates ocaml type definitions,
serialization and deserialization functions from a protobuf file.
The types generated aims to create ocaml idiomatic types;
- messages are mapped into modules
- oneof constructs are mapped to polymorphic variants
- enums are mapped to adt's
- map types are mapped to assoc lists
- all integer types are mapped to int
- all floating point types are mapped to float.
The library only handles protobuf spec version 3.
"""
