(rule
 (targets
   bench.ml empty.ml
   int64.ml  string.ml  float.ml  enum.ml
   int64_list.ml  string_list.ml  float_list.ml  enum_list.ml
 )
 (deps
  (:proto
    ../bench.proto ../empty.proto
    ../int64.proto ../string.proto ../float.proto ../enum.proto
    ../int64_list.proto ../string_list.proto ../float_list.proto ../enum_list.proto)
  (:plugin ../../src/plugin/protoc_gen_ocaml.exe)
 )
 (action
  (bash "for p in %{proto}; do protoc -I .. --plugin=protoc-gen-ocaml=%{plugin} \"--ocaml_out=annot=[@@deriving show { with_path = false },eq]:.\" $p; done")))

(library
 (name        plugin)
 (libraries   ocaml_protoc_plugin)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
)
