(rule
 (targets
   bench.ml bench.mli empty.ml empty.mli
   int64.ml  string.ml  float.ml  enum.ml
   int64.mli string.mli float.mli enum.mli
   int64_list.ml  string_list.ml  float_list.ml  enum_list.ml
   int64_list.mli string_list.mli float_list.mli enum_list.mli
 )
 (deps
  (:proto
    ../bench.proto ../empty.proto
    ../int64.proto ../string.proto ../float.proto ../enum.proto
    ../int64_list.proto ../string_list.proto ../float_list.proto ../enum_list.proto))
 (action
  (bash "for p in %{proto}; do ocaml-protoc -I .. --binary --int32_type int_t --int64_type int_t --ml_out . $p; done")))

(library
 (name  protoc)
 (ocamlopt_flags :standard \ -unboxed-types)
 (libraries pbrt))
