(executable
 (name        test)
 (libraries   ocaml-protoc-plugin ocaml-protoc-plugin.google_types unix)
)

(rule
 (targets extensions.ml)
 (deps
  (:proto extensions.proto) (package ocaml-protoc-plugin))
 (action
  (run protoc -I . "--ocaml_out=:." %{proto})))

(alias
 (name runtest)
 (deps test.exe)
)
