(library
 (name        google_types)
 (public_name ocaml-protoc-plugin.google_types)
 (libraries   ocaml_protoc_plugin)
 (preprocess  (pps ppx_deriving.std))
 (synopsis    "Google well known types")
)

(rule
 (targets google_include)
 (action (with-stdout-to %{targets} (system "[ -d /usr/include/google/protobuf ] && echo /usr/include || echo /usr/local/include" ))))

(rule
 (targets any.ml api.ml descriptor.ml duration.ml empty.ml field_mask.ml
          source_context.ml struct.ml timestamp.ml type.ml wrappers.ml)
 (deps
  (:plugin ../plugin/protoc_gen_ocaml.exe))
 (action
  (run protoc -I %{read-lines:google_include}
       "--plugin=protoc-gen-ocaml=%{plugin}"
       "--ocaml_out=annot=[@@deriving ord, eq, show, iter, map, fold]:."
       %{read-lines:google_include}/google/protobuf/any.proto
       %{read-lines:google_include}/google/protobuf/api.proto
       %{read-lines:google_include}/google/protobuf/descriptor.proto
       %{read-lines:google_include}/google/protobuf/duration.proto
       %{read-lines:google_include}/google/protobuf/empty.proto
       %{read-lines:google_include}/google/protobuf/field_mask.proto
       %{read-lines:google_include}/google/protobuf/source_context.proto
       %{read-lines:google_include}/google/protobuf/struct.proto
       %{read-lines:google_include}/google/protobuf/timestamp.proto
       %{read-lines:google_include}/google/protobuf/type.proto
       %{read-lines:google_include}/google/protobuf/wrappers.proto
)))
